[package]
name = "ffav"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
image-decode = ["image"]

[dependencies]
bitflags = "1.3.2"
ffav-sys = { path = "../ffav-sys" }
fflib-version = { path = "../fflib-version" }
image = { version = "0.23.14", optional = true, default-features = false }
num-rational = "0.4.0"
static_assertions = "1.1.0"
thiserror = "1.0.28"
